# LayerEngine

./: .gitignore  CMakeLists.txt  DeleteTemp.bat  LICENSE
CMake/: AddIconToBinary.cmake
EditorResources/Config/: EditorImGuiConfig.ini  GuiLayout.ini
EditorResources/Textures/Icon/: EditorIcon.icns
Source/Editor/: CMakeLists.txt  main.cpp
Source/Editor/Core/: Editor.h
Source/Editor/EditorUtilities/: EditorUtils.h
Source/Editor/EditorUtilities/Helpers/: EditorFileManager.h
Source/Editor/Header/: Editor.h  EditorThirdPartyConfig.h
Source/Editor/Header/EditorUtilities/Helpers/: EditorFileManager.h
Source/Editor/Source/: Editor.cpp
Source/Editor/_ThirdParty/: EditorThirdParty.h
Source/Editor/_cpp/: Editor.cpp  EditorFileManager.cpp
Source/Engine/: CMakeLists.txt  Engine.h
Source/Engine/Components/: ComponentHandle.h  MeshRenderer.h
Source/Engine/Data/: MeshData.h
Source/Engine/Entities/: Actor.h  EntityHandle.h  Level.h  SubLevel.h
Source/Engine/Header/: Engine.h  ThirdPartyConfig.h
Source/Engine/Header/Components/: MeshRenderer.h
Source/Engine/Header/Data/: Mesh.h  MeshData.h
Source/Engine/Header/Entities/: Level.h  SubLevel.h
Source/Engine/Header/Managers/: EntityHandle.h
Source/Engine/Header/Render/: RenderManager.h  Viewport.h
Source/Engine/Header/Render/Vulkan/: GraphicsPipeline.h  RenderPass.h  SwapChain.h  VkBuffersAndImages.h  VkConfig.h  VkSetup.h
Source/Engine/Header/Utilities/: EngUtils.h  GlobalConstants.h  VkNames.h
Source/Engine/Header/Utilities/Events/: Broadcaster.h
Source/Engine/Header/Utilities/Helpers/: FileHelper.h  StringHelper.h  Timer.h
Source/Engine/Header/Utilities/Logger/: Logger.h  LoggingCallbacks.h
Source/Engine/Header/Utilities/Memory/: GpuMemoryTracker.h  LayerContainers.h  LayerMemory.h  MemoryTracker.h
Source/Engine/Header/Utilities/Types/: HelperTypes.h  VkTypes.h
Source/Engine/Header/Utilities/UI/: ImGuiManager.h
Source/Engine/Managers/: ComponentHandle.h  ECSManager.h  ImGuiManager.h
Source/Engine/Render/: RenderManager.h  Viewport.h
Source/Engine/Render/Vulkan/: GraphicsPipeline.h  RenderPass.h  SwapChain.h  VkBuffersAndImages.h  VkConfig.h  VkSetup.h
Source/Engine/Source/: Engine.cpp  ThirdParty.cpp
Source/Engine/Source/Components/: MeshRenderer.cpp
Source/Engine/Source/Entities/: SubLevel.cpp
Source/Engine/Source/Managers/: ECSManager.cpp
Source/Engine/Source/Render/: RenderManager.cpp  Viewport.cpp
Source/Engine/Source/Render/Vulkan/: GraphicsPipeline.cpp  RenderPass.cpp  SwapChain.cpp  VkSetup.cpp
Source/Engine/Source/Utilities/Helpers/: Timer.cpp
Source/Engine/Source/Utilities/Logger/: Logger.cpp  LoggingCallbacks.cpp
Source/Engine/Source/Utilities/Memory/: GpuMemoryTracker.cpp  MemoryTracker.cpp
Source/Engine/Utilities/: EngUtils.h  GlobalConstants.h
Source/Engine/Utilities/Events/: Broadcaster.h
Source/Engine/Utilities/Helpers/: FileHelper.h  StringHelper.h  Timer.h
Source/Engine/Utilities/Logger/: Logger.h  LoggingCallbacks.h
Source/Engine/Utilities/Memory/: GpuMemoryTracker.h  LayerContainers.h  LayerMemory.h  MemoryTracker.h
Source/Engine/Utilities/Types/: HelperTypes.h  VkTypes.h
Source/Engine/_ThirdParty/: ConstantsAndAliases.h  GlobalAliases.h  ThirdParty.h  ThirdPartyConfig.h
Source/Engine/_cpp/: Engine.cpp  FileHelper.cpp  GpuMemoryTracker.cpp  ImGuiManager.cpp  Logger.cpp  LoggingCallbacks.cpp  MemoryTracker.cpp  RenderManager.cpp  RenderPass.cpp  StringHelper.cpp  SwapChain.cpp  Timer.cpp  Viewport.cpp  VkBuffersAndImages.cpp  VkSetup.cpp
